# ai-torque-cpp-inference

./: .gitignore  CMakeLists.txt  README.md  demo.py  stream.m  stream.py
archive/: client.py  matlab_stream.cpp  stream.py
include/: daqmodels.h
scripts/: build.sh  run.sh
src/: daq_stream.cpp  daqmodels.cpp  model.pt
